# online-game

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  ruff.toml
alembic/: env.py
alembic/versions/: 7fcf651f2864_initial_migrations.py
app/: consts.py  main.py
app/api/: player.py  tournament_api.py
app/core/: config.py
app/dependecies/: services.py
app/domain/abc_repositories/: __init__.py  player_abc_repository.py  tournament_abc_repository.py
app/domain/models/: __init__.py  players.py  tournament.py
app/domain/services/: __init__.py  player_service.py  tournament_service.py
app/errors/: player_errors.py  tournament_errors.py
app/infrastructure/: database.py
app/infrastructure/orm/: __init__.py  player_orm_repository.py  queries.py  tournament_orm_repository.py
app/schemas/: __init__.py  base_schema.py  player.py  tournament.py
test/: conftest.py  test_health.py  test_tournament.py
