[project]
name = "online-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.12",
    "loguru>=0.7.3",
    "pydantic[email]>=2.11.5",
    "pydantic-settings>=2.9.1",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.3",
    "alembic>=1.16.1",
    "httpx>=0.28.1",
    "pytest-asyncio>=1.0.0",
    "aiosqlite>=0.21.0",
]
