[project]
name = "online-game"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncpg==0.30.0",
    "fastapi==0.115.12",
    "loguru==0.7.3",
    "pydantic[email]==2.11.5",
    "pydantic-settings==2.9.1",
    "sqlalchemy==2.0.41",
    "uvicorn==0.34.3",
    "alembic==1.16.1",
    "httpx==0.28.1",
    "pytest-asyncio==1.0.0",
    "aiosqlite==0.21.0",
    "mypy==1.16.0",
    "ruff==0.11.13",
    "black==25.1.0",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "certifi==2025.4.26",
    "click==8.2.1",
    "colorama==0.4.6",
    "dnspython==2.7.0",
    "email-validator==2.2.0",
    "greenlet==3.2.3",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.10",
    "iniconfig==2.1.0",
    "mako==1.3.10",
    "markupsafe==3.0.2",
    "mypy-extensions==1.1.0",
    "packaging==25.0",
    "pathspec==0.12.1",
    "platformdirs==4.3.8",
    "pluggy==1.6.0",
    "pydantic-core==2.33.2",
    "pygments==2.19.1",
    "pytest==8.4.0",
    "python-dotenv==1.1.0",
    "sniffio==1.3.1",
    "starlette==0.46.2",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "win32-setctime==1.2.0",
]

[tool.black]
line-length = 88
target-version = ["py312"]
